remove TransactionVerifiedEvent